syntax = "proto3";

package orca.v1;

message Events {
  repeated Transaction transactions = 1;
}

message Transaction {
  bytes signature = 1;
  bytes fee_payer = 2;
  repeated bytes signers = 3;
  uint64 fee = 4;
  uint64 compute_units_consumed = 5;
  repeated Instruction instructions = 6;
  repeated Log logs = 7;
}

message Instruction {
  bytes program_id = 1;
  uint32 stack_height = 2;
  oneof instruction {
    SwapInstruction swap = 3;
    SwapV2Instruction swap_v2 = 4;
    TwoHopSwapInstruction two_hop_swap = 5;
    TwoHopSwapV2Instruction two_hop_swap_v2 = 6;
  }
}

message SwapAccounts {
  bytes token_program = 1;
  bytes token_authority = 2;
  bytes whirlpool = 3;
  bytes token_owner_account_a = 4;
  bytes token_vault_a = 5;
  bytes token_owner_account_b = 6;
  bytes token_vault_b = 7;
  bytes tick_array0 = 8;
  bytes tick_array1 = 9;
  bytes tick_array2 = 10;
  bytes oracle = 11;
}

message SwapV2Accounts {
  bytes token_program_a = 1;
  bytes token_program_b = 2;
  bytes memo_program = 3;
  bytes token_authority = 4;
  bytes whirlpool = 5;
  bytes token_mint_a = 6;
  bytes token_mint_b = 7;
  bytes token_owner_account_a = 8;
  bytes token_vault_a = 9;
  bytes token_owner_account_b = 10;
  bytes token_vault_b = 11;
  bytes tick_array0 = 12;
  bytes tick_array1 = 13;
  bytes tick_array2 = 14;
  bytes oracle = 15;
}

message SwapInstruction {
  SwapAccounts accounts = 1;
  uint64 amount = 2;
  uint64 other_amount_threshold = 3;
  string sqrt_price_limit = 4;
  bool amount_specified_is_input = 5;
  bool a_to_b = 6;
}

message SwapV2Instruction {
  SwapV2Accounts accounts = 1;
  uint64 amount = 2;
  uint64 other_amount_threshold = 3;
  string sqrt_price_limit = 4;
  bool amount_specified_is_input = 5;
  bool a_to_b = 6;
}

message TwoHopSwapInstruction {
  uint64 amount = 1;
  uint64 other_amount_threshold = 2;
  bool amount_specified_is_input = 3;
  bool a_to_b_one = 4;
  bool a_to_b_two = 5;
  string sqrt_price_limit_one = 6;
  string sqrt_price_limit_two = 7;
}

message TwoHopSwapV2Instruction {
  uint64 amount = 1;
  uint64 other_amount_threshold = 2;
  bool amount_specified_is_input = 3;
  bool a_to_b_one = 4;
  bool a_to_b_two = 5;
  string sqrt_price_limit_one = 6;
  string sqrt_price_limit_two = 7;
}

message Log {
  bytes program_id = 1;
  uint32 invoke_depth = 2;
  oneof log {
    TradedEvent traded = 3;
    PoolInitializedEvent pool_initialized = 4;
    LiquidityIncreasedEvent liquidity_increased = 5;
    LiquidityDecreasedEvent liquidity_decreased = 6;
  }
}

message TradedEvent {
  bytes whirlpool = 1;
  bool a_to_b = 2;
  string pre_sqrt_price = 3;
  string post_sqrt_price = 4;
  uint64 input_amount = 5;
  uint64 output_amount = 6;
  uint64 input_transfer_fee = 7;
  uint64 output_transfer_fee = 8;
  uint64 lp_fee = 9;
  uint64 protocol_fee = 10;
}

message PoolInitializedEvent {
  bytes whirlpool = 1;
  bytes whirlpools_config = 2;
  bytes token_mint_a = 3;
  bytes token_mint_b = 4;
  uint32 tick_spacing = 5;
  bytes token_program_a = 6;
  bytes token_program_b = 7;
  uint32 decimals_a = 8;
  uint32 decimals_b = 9;
  string initial_sqrt_price = 10;
}

message LiquidityIncreasedEvent {
  bytes whirlpool = 1;
  bytes position = 2;
  int32 tick_lower_index = 3;
  int32 tick_upper_index = 4;
  string liquidity = 5;
  uint64 token_a_amount = 6;
  uint64 token_b_amount = 7;
  uint64 token_a_transfer_fee = 8;
  uint64 token_b_transfer_fee = 9;
}

message LiquidityDecreasedEvent {
  bytes whirlpool = 1;
  bytes position = 2;
  int32 tick_lower_index = 3;
  int32 tick_upper_index = 4;
  string liquidity = 5;
  uint64 token_a_amount = 6;
  uint64 token_b_amount = 7;
  uint64 token_a_transfer_fee = 8;
  uint64 token_b_transfer_fee = 9;
}
